# mlops-image-classification-service

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy_dev.yml  deploy_prod.yml  infra_apply.yml  model_release.yml  training_pipeline.yml
docker/training_environment/: Dockerfile
