[project]
name = "mlops-image-classification-service"
version = "0.1.0"
description = "End-to-End MLOPS focused Image Classification Project"
authors = [
    {name = "Peer Ahamad Shaik",email = "shaikahamad49@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "mlops_image_classification_service", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
